# popt-course

nasm/: compile.sh  run.sh  task1.asm  task2.asm  task3.asm  task4.asm  task5.asm  task8.asm
simd/: CMakeLists.txt  aligned_allocator.h  common.cpp  common.h  linalg.cpp  linalg.h  main.cpp  simd.h  task1.cpp  task1.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h
